@@ -1,6 +1,7 @@
 package ma.inpt.cedoc.model.DTOs.mapper.CandidatureMappers;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -21,37 +22,44 @@ public class CandidatureMapperImpl implements CandidatureMapper {
     @Override
     public Candidature toEntity(CandidatureRequestDTO dto) {
         Candidat candidat = candidatService.findFullCandidatById(dto.getCandidatId());
-
-        return Candidature.builder()
+        Candidature c = Candidature.builder()
                 .statutCandidature(CandidatureEnum.SOUMISE)
                 .mentionBac(dto.getMentionBac())
                 .mentionDiplome(dto.getMentionDiplome())
-                .dossierCandidature(dto.getDossierCandidature())
+                // Le path du fichier sera mis à jour dans le service, pas ici
+                .dossierCandidature("")
                 .typeEtablissement(dto.getTypeEtablissement())
                 .specialite(dto.getSpecialite())
                 .intitulePFE(dto.getIntitulePFE())
-                .statutProfessionnel(dto.getStatutProfessionnel())
                 .candidat(candidat)
-                .sujets(null)
+                .sujets(null) // la liste sera complétée en service
                 .build();
+        return c;
+
     }
 
     @Override
     public CandidatureResponseDTO toResponseDTO(Candidature entity) {
+
         return CandidatureResponseDTO.builder()
                 .id(entity.getId())
                 .createdAt(entity.getCreatedAt())
                 .updatedAt(entity.getUpdatedAt())
                 .statutCandidature(entity.getStatutCandidature())
                 .mentionBac(entity.getMentionBac())
+                .diplome(entity.getDiplome())
                 .mentionDiplome(entity.getMentionDiplome())
                 .dossierCandidature(entity.getDossierCandidature())
                 .typeEtablissement(entity.getTypeEtablissement())
                 .specialite(entity.getSpecialite())
                 .intitulePFE(entity.getIntitulePFE())
-                .statutProfessionnel(entity.getStatutProfessionnel())
                 .candidatId(entity.getCandidat().getId())
-                .sujetsIds(entity.getSujets() != null ? entity.getSujets().stream().map(s -> s.getId()).toList() : List.of())
+                .sujetsIds(
+                        entity.getSujets() != null
+                                ? entity.getSujets().stream()
+                                        .map(s -> s.getId())
+                                        .collect(Collectors.toList())
+                                : List.of())
                 .build();
     }
 }
